Positioning the divs in the proper position

--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,9 @@
+/***************
+*              *
+*     RESET    *
+*              *
+****************/
+
 /* http://meyerweb.com/eric/tools/css/reset/
    v2.0 | 20110126
    License: none (public domain)
@@ -45,4 +51,21 @@ q:before, q:after {
 table {
   border-collapse: collapse;
   border-spacing: 0;
+}
+
+/***************
+*              *
+*     General  *
+*              *
+****************/
+
+body {
+  background-color: LightGray;
+}
+div {
+  border: 1px solid Chocolate;
+  height: 6em;
+}
+header {
+
 }
