--- a/css/style.css
+++ b/css/style.css
@@ -4,6 +4,20 @@
 *              *
 ****************/
 
+/*Box Sizing Reset*/
+html
+{
+  -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  box-sizing: border-box;
+}
+*, *:before, *:after
+{
+  -webkit-box-sizing: inherit;
+  -moz-box-sizing: inherit;
+  box-sizing: inherit;
+}
+
 /* http://meyerweb.com/eric/tools/css/reset/
    v2.0 | 20110126
    License: none (public domain)
@@ -81,6 +95,7 @@ div
   font-size: 16px;
   color: #838994;
   letter-spacing: 0.03em;
+  -webkit-font-smoothing: antialiased;
 }
 
 /***************
@@ -99,39 +114,38 @@ div
 {
   background-color: #fff;
 }
+.content
+{
+  padding: 0 15px;
+}
 .top-navigation > .content
 {
   border: 1px solid #000;
   width: 60.625rem; /*970px / 16px*/
   height: 4.375rem; /*70px / 16px*/
   margin: 0 auto;
-  padding: 0px 15px;
-  -webkit-box-sizing: border-box;
-  -moz-box-sizing: border-box;
-  box-sizing: border-box;
 }
-.logo
+.top-navigation .logo
 {
   height: 70px;
 }
-.links
+.top-navigation .links
 {
   float: right;
   margin-top: 25px;
 }
-.links > li
+.top-navigation .links li
 {
   display: inline-block;
   margin-left: 10px;
-  -webkit-font-smoothing: antialiased;
 }
-.top-navigation .links > .active
+.top-navigation .links .active
 {
   color: #4c5058;
   font-weight: 600;
 }
 
-.links > li:hover
+.top-navigation .links li:hover
 {
   color: #4c5058;
   cursor: pointer;
