--- a/css/style.css
+++ b/css/style.css
@@ -166,14 +166,29 @@ table {
   font-size: 1.563rem;
   margin-top: 1.25rem;
 }
-/*.intro .content h1,
-.intro .content h3
+.big-button
 {
-  font-family: 'Roboto', sans-serif;
-  font-size: 16px;
-  letter-spacing: 0.03em;
-  -webkit-font-smoothing: antialiased;
-}*/
+  text-shadow: none;
+  border-style: none;
+  border-radius: 4px;
+  padding: 16px 26px;
+  line-height: 1.33;
+  font-size: 1.125rem;
+  background-color: #f15a29;
+  color: #fff;
+  width: 9.688rem;
+  margin: 0 auto;
+  display: block;
+  margin-top: 1.25rem;
+}
+.big-button:hover
+{
+  background-color: #D9400E;
+  cursor: pointer;
+  -webkit-transition: color 0.5s ease;
+  -o-transition: color 0.5s ease;
+  transition: color 0.5s ease;
+}
 
 /*.feat
 {
