--- a/css/style.css
+++ b/css/style.css
@@ -77,7 +77,7 @@ table {
 .header
 {
   position: fixed;
-  top: 0;
+  z-index: 9999;
   width: 100%;
 }
 .content {
@@ -100,7 +100,8 @@ table {
 .top-navigation .links,
 .intro .content h1,
 .intro .content h3,
-.feat h1
+.feat h2,
+.feat .devices .caption h3
 {
   font-family: 'Roboto', sans-serif;
 }
@@ -215,7 +216,6 @@ table {
   width: 33.33333%;
   display: inline-block;
   /*styles to assist with debugging*/
-  border: 1px solid #000;
   -webkit-box-sizing: border-box;
   -moz-box-sizing: border-box;
   box-sizing: border-box;
@@ -241,7 +241,13 @@ table {
   margin-left: 100px;
   margin-top: 25px;
 }
-.feat
+.feat .devices .caption h3
+{
+  text-align: center;
+  margin-top: 35px;
+  font-size: 1.75rem;
+  font-weight: 400;
+}
 /*.footer
 {
   position: relative;
