--- a/css/style.css
+++ b/css/style.css
@@ -248,9 +248,27 @@ table {
   font-size: 1.75rem;
   font-weight: 400;
 }
-/*.footer
+
+/*************
+*            *
+*   Footer   *
+*            *
+*************/
+.footer
 {
   position: relative;
   width: 100%;
   top: 100px;
-}*/
+}
+.footer .content
+{
+  border-top: 1px solid #000;
+  margin-top: 175px;
+}
+.footer .content h4
+{
+  text-align: center;
+  font-size: 1.25rem;
+  font-weight: 300;
+  margin-top: 25px;
+}
